Refactored code to stream tracks directly instead of downloading and playing them